--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -45,8 +45,8 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install Jupyter
         run: |
-          conda install -c conda-forge jupyter -y
-        shell: bash
+          python -m pip install --upgrade pip
+          pip install jupyter
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
