--- a/_config.yml
+++ b/_config.yml
@@ -151,6 +151,8 @@ collections:
     output: true
   projects:
     output: true
+  video_games:
+    output: true
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
