--- a/_config.yml
+++ b/_config.yml
@@ -206,13 +206,13 @@ plugins:
   - jekyll-imagemagick
   - jekyll-jupyter-notebook
   - jekyll-link-attributes
-  - jekyll-minifier
+  # - jekyll-minifier
   - jekyll-paginate-v2
   - jekyll-regex-replace
   - jekyll/scholar
   - jekyll-sitemap
   - jekyll-tabs
-  - jekyll-terser
+  # - jekyll-terser
   - jekyll-toc
   - jekyll-twitter-plugin
   - jemoji
@@ -239,9 +239,10 @@ jekyll-minifier:
 # Terser
 # -----------------------------------------------------------------------------
 
-terser:
-  compress:
-    drop_console: true
+# terser:
+#   compress:
+#     drop_console: true
+# Temporarily disabled due to syntax errors
 
 # -----------------------------------------------------------------------------
 # Jekyll Archives
@@ -349,7 +350,7 @@ external_links:
 # MAKE SURE imagemagick is installed and on your PATH before enabling imagemagick. In a terminal, run:
 #   convert -version
 imagemagick:
-  enabled: true # enables responsive images for your site (recommended, see https://github.com/alshedivat/al-folio/issues/537)
+  enabled: false # temporarily disabled due to Windows path issues
   widths:
     - 480
     - 800
