Updating web description

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ last_name: Kaundinya
 contact_note: >
   Email and LinkedIn are great ways to connect!
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Ram Eshwar Kaundinya's personal website - Neuromorphic AI researcher at the University of Groningen, working on tactile and sensorimotor applications in cognitive systems and materials.
+  Ram Eshwar Kaundinya's personal website - Neuromorphic AI researcher at the University of Groningen, working on tactile and sensorimotor applications.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
